--- a/pom.xml
+++ b/pom.xml
@@ -32,5 +32,11 @@
    		<artifactId>javax.el-api</artifactId>
    		<version>2.2.4</version>
 	</dependency>
+	<dependency>
+		<groupId>org.drools</groupId>
+		<artifactId>knowledge-api</artifactId>
+		<version>6.4.0.Final</version>
+	</dependency>
+	
   </dependencies>
 </project>
